spacing fixed

--- a/public/css/smartnet.css
+++ b/public/css/smartnet.css
@@ -165,3 +165,11 @@ rect:hover {
 .footer {
   margin-top: 10px;
 }
+
+#nav-filter .navbar-nav>li>a {
+  padding-top: 25px;
+}
+
+#nav-filter .btn-group {
+  padding-top: 12px;
+}
